[package]
name = "find-bugged-delegators"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deep_space = "2.8"
cosmos-sdk-proto = {package = "cosmos-sdk-proto-althea", version = "0.9"}
tokio = {version = "1", features = ["rt-multi-thread"]}